codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__login_account_manager_uses_selected_auth_home.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 1834
expression: popup
---
┌────────────────────────────── Manage Accounts ───────────────────────────────┐
│ Connected Accounts                                                           │
│                                                                              │
│ > Profile account  API key - connected YYYY-MM-DD HH:MM  switching           │
│ unavailable                                                                  │
│                                                                              │
│ Add account...                                                               │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
