codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__login_picker_stored_accounts_selectable.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
  Choose Login
  Start a fresh session with the selected account.

  Search logins
› default (current)   Use the default Codex Lab login
  stored@example.com  Active stored account - ChatGPT - account-stored
  Automation key      Stored account - API key - press Enter to use
  Add login...        Open ChatGPT sign-in for a new login

  Press enter to confirm or esc to go back
