codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__settings_popup_with_automatic_validation.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Settings
  Configure settings for Codex.

› 1. Manage accounts       Add, switch, or disconnect stored accounts.
  2. Account switching     Configure automatic account switching.
  3. Automatic Validation  Current: Disabled. Configure trusted patch-time and
                           end-of-turn checks.
  4. Agents                Check third-party agent CLIs used by spawn_agent.

  Press enter to confirm or esc to go back
